--- a/index.html
+++ b/index.html
@@ -1,19 +1,33 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio</title>
 </head>
+
 <body>
-    <p>Eu sou a professora Monalize.</p>
-   <h1> Sou professora de Informática e professora formadora de Programação.</h1>
-   <p> Sou de Londrina, Paraná.</p>
-   <p> Minhas habilidades: </p>
-   <ul>
-    <li> HTML</li>
-    <li> CSS</li>
-    <li> Javascript</li>
-   </ul>
+    <header>
+        <img src="imagem/Mona_prof.png" alt="foto pessoal" width="200">
+        <p>Eu sou a professora Monalize.</p>
+        <h1> Sou professora de Informática e professora formadora de Programação.</h1>
+        <p> Sou de Londrina, Paraná.</p>
+        <p> Minhas habilidades: </p>
+        <ul>
+            <span> HTML</span>
+            <span> CSS</span>
+            <span> Javascript</span>
+        </ul>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+        <h2> Contatos</h2>
+        <a href="https://github.com/mlize08"> Github</a>
+        <p> Site produzido por Monalize</p>
+    </footer>
 </body>
+
 </html>
